# acc-viz

./: .gitignore  ANLEITUNG_DESKTOP.md  BESCHREIBUNG.md  README.md  app.py  data_loader.py  desktop_main.py  processing.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
packaging/: acc_viz.spec  build.py  entry.py  version_reader.py
src/: logging_setup.py
src/analysis/: grid.py  interpolation.py  rms.py
src/core/: colorscales.py  errors.py  export.py  pipeline.py  settings.py  strings.py
src/desktop/: app_runner.py  control_panel.py  export.py  load_progress.py  main_window.py  manual_dialog.py  resources.py
src/io/: csv_reader.py  plate_loader.py  schema.py
src/platform_utils/: folder_picker.py  subprocess_utils.py
src/ui/: errors.py  export.py  heatmap.py  histogram.py  sidebar.py  spectrum.py  strings.py
tests/: conftest.py  test_data_loader.py  test_logging_setup.py  test_packaging_build.py  test_processing.py  test_version_reader.py
tests/analysis/: test_grid.py  test_interpolation.py  test_rms.py
tests/core/: conftest.py  test_errors.py  test_helpers.py  test_pipeline.py  test_settings.py  test_strings.py
tests/desktop/: conftest.py  test_app_runner.py  test_control_panel.py  test_export.py  test_heatmap_canvas.py  test_load_progress.py  test_main_window.py  test_main_window_integration.py  test_manual_dialog.py  test_plot_canvases.py  test_resources.py
tests/io/: conftest.py  test_csv_reader.py  test_plate_loader.py  test_schema.py
tests/platform_utils/: test_folder_picker.py  test_subprocess_utils.py
(+29 files in other folders)
