[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acc-visualisation"
version = "0.7.2"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=2.0.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
packaging = ["pyinstaller>=6.0"]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
extraPaths = ["."]

